# LOG_Analysis

./: .gitignore  README.md  VM.md  auto_linux.sh  dataset.py  run_logplayer.sh  testLOG.cpp
Hera/: .gitignore  README.md  windows_auto.sh
Hera/Hera/: Hera.pro  main.cpp
Hera/logreader/: file_format.h  file_format_legacy.cpp  file_format_legacy.h  file_format_timestamp_type_size_raw_message.cpp  file_format_timestamp_type_size_raw_message.h  log_file.cpp  log_file.h  log_slider.cpp  log_slider.h  logreader.pro  logreader_global.h  message_type.h  player.cpp  player.h
Hera/logwriter/: logwriter.cpp  logwriter.h  logwriter.pro  logwriter_global.h
Hera/netreceive/: netreceive.cpp  netreceive.h  netreceive.pro  netreceive_global.h
Hera/netsend/: netsend.cpp  netsend.h  netsend.pro  netsend_global.h
newVisionModule/: demo.h  interaction.cpp  main.cpp  vision_plugin.pro
newVisionModule-for-ssl-master/: interaction.h  main.cpp  main.qml  zsplugin.hpp  zss.ini
newVisionModule-for-ssl-master/Model/: ballstate.cpp
newVisionModule-for-ssl-master/communication/: actionmodule.h  radiopacket.cpp  radiopacket.h
newVisionModule-for-ssl-master/share/: geometry.h  staticparams.h
newVisionModule-for-ssl-master/vision/: field.cpp  kalmanfilter.cpp  messageformat.h  zss_cmd.proto  zss_kickparam.proto
ssl-logtools-master/src/examples/: CMakeLists.txt  examplereader.cpp
ssl-logtools-master/src/examples/protobuf/cpp/: messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_geometry_legacy.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h
(+171 files in other folders)
